# Vetty-backend

./: README.md  backend-requirements.txt  package-lock.json  package.json  pyproject.toml
backend/: .coverage  .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  categories.py  coins.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/services/: coingecko.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_categories.py  test_coingecko_service.py  test_coins.py  test_config.py  test_database.py  test_main.py  test_security.py  test_security_advanced.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: layout.tsx
client/src/lib/: api.ts
client/src/pages/: categories.tsx  coin-details.tsx  home.tsx
server/: index.ts
